2004-04-15  Alexander Larsson  <alexl@redhat.com>

        * modules/sftp-method.c (sftp_connect):
        Handle ssh servers that ask "Password:" instead of "password:".

2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-04-01  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-inet-connection.c (gnome_vfs_inet_connection_read):
	Correctly return GNOME_VFS_ERROR_EOF on EOF.

2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-30  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-parse-ls.c (finduid, findgid):
	Remove non-threadsafe use of globals (bug 41179)

2004-03-26  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-application-registry.c (gnome_vfs_application_registry_get_mime_types):
	Fix crash. (#136748)

2004-03-19  Alexander Larsson  <alexl@redhat.com>

	* modules/smb-method.c (do_get_file_info):
	Make sure the toplevel smb directories aren't writeable.

2004-03-22  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Bump to 2.6.1

=== gnome-vfs 2.6.0 ===

2004-03-22  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.6.0

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-19  Alexander Larsson  <alexl@redhat.com>

	* doc/writing-modules.sgml:
	Fixed some doc details wrt chained uri syntax

	* modules/ftp-method.c (do_open_directory):
	Fix potential buffer overrun.

2004-03-18  Alexander Larsson  <alexl@redhat.com>

	* schemas/desktop_gnome_url_handlers.schemas.in:
	Fix up needs_terminal typos
	Patch from Warren Togami
	
2004-03-16  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

=== gnome-vfs 2.5.91 ===
